Fix spacing between sections

--- a/source/sass/blocks/_benefits.scss
+++ b/source/sass/blocks/_benefits.scss
@@ -1,6 +1,5 @@
 .benefits {
-  padding-top: 50px;
-
+  margin-bottom: 80px;
   &__container {
     @extend .container;
     position: relative;
