--- a/source/sass/blocks/_destinations.scss
+++ b/source/sass/blocks/_destinations.scss
@@ -1,4 +1,5 @@
 .destinations {
+  margin-bottom: 80px;
   &__container {
     @extend .container;
     position: relative;
@@ -16,6 +17,7 @@
   }
 
   &__wrapper {
+    margin-bottom: 80px;
   }
 
   &__card {
