--- a/source/sass/blocks/_places.scss
+++ b/source/sass/blocks/_places.scss
@@ -1,5 +1,5 @@
 .places {
-  padding-top: 50px;
+  margin-bottom: 80px;
   background-image: url('../img/backgrounds/gray-rectangle.jpg');
   background-position: right;
   background-size: 789px 580px;
